--- a/test_02(canvas)/canvas.html
+++ b/test_02(canvas)/canvas.html
@@ -93,7 +93,9 @@
                     //draw_translate3();
                     //draw_Scale();
                     //draw_transorder();
-                    draw_mirroring();
+                    //draw_mirroring();
+                    //draw_rotate();
+                    draw_rotate2();
                 }
                 function draw(){
                     // draw rect
@@ -262,6 +264,29 @@
                         ctx.translate(100,0);
                         ctx.scale(-1,1);
                         ctx.drawImage(img,0,0);
+                    }
+                }
+
+                // rotate text
+                function draw_rotate(){
+                    ctx.font = "30pt 궁서";
+                    ctx.fillStyle = "blue";
+                    ctx.fillText("대한민국", 40,40);
+                    
+                    ctx.rotate(30*Math.PI / 180);
+                    ctx.fillStyle = "red";
+                    ctx.fillText("대한민국",40,40);
+                }
+
+                // rotate image
+                function draw_rotate2(){
+                    var img = new Image();
+                    img.src = "cosmos.jpg";
+                    img.onload = function(){
+                        ctx.translate(canvas.width/2, canvas.height/2);
+                        ctx.rotate(30*Math.PI/180);
+                        ctx.translate(-canvas.width/2, -canvas.height/2);
+                        ctx.drawImage(img,120,0);
                     }
                 }
 
