--- a/test_02(canvas)/freeline.html
+++ b/test_02(canvas)/freeline.html
@@ -22,9 +22,51 @@
             <option value="2">중간</option>
             <option value="3">굵게</option>
         </select>
+
+        <input type="button" id="clear" value="모두지움"/>
     </div>
 
     <canvas id="canvas" width="600" height="400">
         이 브라우저는 캔버스를 지원하지 않습니다 .
     </canvas>
+
+    <script>
+        var canvas;
+        var ctx;
+        var sx, sy;
+        var drawing = false;
+
+        window.onload = function(){
+            canvas = document.getElementById("canvas");
+            if (canvas == null || canvas.getContext == null) return;
+            ctx = canvas.getContext("2d");
+            ctx.lineCap = "round";
+
+            // 현재 위치를 저장한다. 
+            canvas.onmousedown = function(e){
+                e.preventDefault();
+                sx = canvasX(e.clientX);
+                sy = canvasY(e.clientY);
+                drawing = true;
+            }
+
+            // 현재 위치에서 새로 이동한 곳까지 선을 그린다. 
+            canvas.onmousemove = function(e){
+                if(drawing){
+                    e.preventDefault();
+                    ctx.beginPath();
+                    ctx.moveTo(sx, sy);
+                    sx = canvasX(e.clientX);
+                    sy = canvasY(e.clientY);
+                    ctx.lineTo(sx, sy);
+                    ctx.stroke();
+                }
+            }
+
+            // 그리기를 종료한다.
+            canvas.onmouseup = function(e){
+                drawing = false;
+            }
+        }
+    </script>
 </body>
