--- a/test_02(canvas)/drawrects.html
+++ b/test_02(canvas)/drawrects.html
@@ -33,6 +33,26 @@
         var drawing = false;    // 그리고 있는 중인가
         var moving = -1;        // 이동중인 도형 첨자
 
+        // 사각형 생성자
+        function Rectangle(sx,sy,ex,ey,color){
+            this.sx = sx;
+            this.sy = sy;
+            this.ex = ex;
+            this.ey = ey;
+            this.color = color;
+        }
+
+        // x,y 위치의 사각형 찾음, 없으면 -1
+        function getRectangle(x,y){
+            for(var i = 0; i < arRectangle.lenght; i++){
+                var rect = arRectangle[i];
+                if(x > rect.sx && x < rect.ex && y > rect.sy && rect.ey){
+                    return i;
+                }
+            }
+            return -1;
+        }
+
         window.onload = function(){
             canvas = document.getElementById("canvas");
             if(canvas == null || canvas.getContext == null) return;
