--- a/test_02(canvas)/drawrects.html
+++ b/test_02(canvas)/drawrects.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <div>
-        색상 :  
-        <select id = "selcolor">
+        색상 :  <select id = "selcolor">
             <option value="rgba(255,255,0,0.6)">노랑</option>    
             <option value="rgba(255,0,0,0.3)">빨강</option>    
             <option value="rgba(0,255,0.5)">초록</option>    
@@ -44,9 +43,9 @@
 
         // x,y 위치의 사각형 찾음, 없으면 -1
         function getRectangle(x,y){
-            for(var i = 0; i < arRectangle.lenght; i++){
+            for(var i = 0; i < arRectangle.length; i++){
                 var rect = arRectangle[i];
-                if(x > rect.sx && x < rect.ex && y > rect.sy && rect.ey){
+                if(x > rect.sx && x < rect.ex && y > rect.sy && y < rect.ey){
                     return i;
                 }
             }
@@ -60,7 +59,7 @@
                 var r = arRectangle[i];
                 ctx.fillStyle = r.color;
                 ctx.fillRect(r.sx, r.sy, r.ex-r.sx, r.ey-r.sy);
-                ctx.strokeStyle(r.sx, r.sy, r.ex-r.sx, r.ey-r.sy);
+                ctx.strokeRect(r.sx, r.sy, r.ex-r.sx, r.ey-r.sy);
             }
         }
 
@@ -97,7 +96,7 @@
                     drawRects();
                     ctx.fillStyle = color;
                     ctx.fillRect(sx, sy, ex-sx, ey-sy);
-                    ctx.strokeStyle(sx, sy, ex-sx, ey - sy);
+                    ctx.strokeRect(sx, sy, ex-sx, ey - sy);
                 }
 
                 // 상대적인 마우스 이동 거리만큼 도형 이동
@@ -106,7 +105,7 @@
                     r.sx += (ex - sx);
                     r.sy += (ey - sy);
                     r.ex += (ex - sx);
-                    r.ey += (sy - sy);
+                    r.ey += (ey - sy);
                     sx = ex;
                     sy = ey;
                     drawRects();
@@ -116,24 +115,27 @@
             canvas.onmouseup = function(e){
                 // 좌표 정규화해서 새로운 도형을 배열에 추가
                 if(drawing){
-                    
+                    var x1 = Math.min(sx, ex);
+                    var y1 = Math.min(sy, ey);
+                    var x2 = Math.max(sx, ex);
+                    var y2 = Math.max(sy, ey);
+                    arRectangle.push(new Rectangle(x1, y1, x2, y2, color));
                 }
+
+                drawing = false;
+                moving = -1;
             }
         }
 
         var selcolor = document.getElementById("selcolor");
 		selcolor.onchange = function(e) {
-			ctx.strokeStyle = selcolor.value;
-		}
-		
-		var selwidth = document.getElementById("selwidth");
-		selwidth.onchange = function(e) {
-			ctx.lineWidth = selwidth.value;
+			color = selcolor.value;
 		}
 		
 		var btnclear = document.getElementById("clear");
 		btnclear.onclick = function(e) {
-			ctx.clearRect(0, 0, canvas.width, canvas.height);
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+            arRectangle.length = 0;
 		}
 		
 		function canvasX(clientX) {
